--- a/index.html
+++ b/index.html
@@ -96,14 +96,17 @@
                 Bachelor's Degree in Engineering
             </p>
             <p class="infoTxt">
+                GPA: 4.0/4.0
+            </p>
+            <p class="infoTxt">
                 Activities and Societies: The Data Mine (Corporate Partners Cohort), Purdue Space Program (Active Controls), The Founders Club, Boiler Kitchen
             </p>
             <p class="infoTxt">
-                Relevant Coursework (Currently Taking): CS 159 (Tested Out), Calculus 3, The Data Mine Seminar, Introduction to Entrepreneurship
+                Relevant Coursework: CS 159 (Tested Out), Calculus 3, The Data Mine Seminar, Introduction to Entrepreneurship
             </p>
         </div>
 
-        <div class="infoSec">
+        <!-- <div class="infoSec">
             <p class="subTitle">
                 Chelmsford High School <span>2020 - 2024</span>
             </p>
@@ -116,16 +119,38 @@
             <p class="infoTxt">
                 Relevant Coursework: AP Physics C (5), AP Calculus BC (5), AP Physics 1 (5), AP CSA (self-studied) (5), AP Research (5)
             </p>
-            <!-- <p class="infoTxt">  REMOVED THIS BECAUSE IT'S PROBABLY GOOD TO INCLUDE LESS HIGH SCHOOL STUFF
+                <p class="infoTxt">  REMOVED THIS BECAUSE IT'S PROBABLY GOOD TO INCLUDE LESS HIGH SCHOOL STUFF
                 Activities and Societies: Physics and Engineering Club (Co-President), Coding Club (Co-President), National Science Honor Society (Board member), National English Honor Society (Board Member), National Honor Society, World Language Honor Society, Tennis Team (Captain)
-            </p> -->
-        </div>
+            </p>
+        </div> -->
     </section>
     <section id="Experience">
         <div class="titles">
             <p>
                 Experience
             </p>
+        </div>
+        <div class="infoSec">
+            <p class="subTitle">
+                SpaceX<span>January 2025 - Present</span>
+            </p>
+            <p class="subSubTitle">
+                Automation and Controls Engineering
+            </p>
+            <p class="infoTxt">
+                building cool stuff
+            </p>
+            <!-- <div class="pSkills">
+                <p>
+                    Altium Designer
+                </p>
+                <p>
+                    Simulink
+                </p>
+                <p>
+                    C++
+                </p>
+            </div> -->
         </div>
         <div class="infoSec">
             <p class="subTitle">
@@ -151,7 +176,7 @@
         </div>
         <div class="infoSec">
             <p class="subTitle">
-                The Data Mine, Purdue University<span>August 2024 - Present</span>
+                The Data Mine, Purdue University<span>August 2024 - December 2024</span>
             </p>
             <p class="subSubTitle">
                 Undergraduate Data Science Researcher (Corporate Partners)
@@ -227,32 +252,35 @@
         <div id="projectsGrid">
             <div class="infoSec">
                 <p class="subTitle">
-                    <a href="https://arxiv.org/abs/2409.09445" target="_blank">Sustainability Research</a>
+                    MAVERIK
                 </p>
-                <img src="projects/research.jpg">
+                <img src="projects/MAVERIK.jpg">
                 <div class="xtraPad">
                     <p class="infoTxt">
-                        a paper I authored on the potential of recycling PP from fishnet/rope and reinforcing it with glass fiber (GF) in the form of 3D printer filaments as a way to reduce/prevent ocean plastic. I also <a href="https://youtu.be/1YFS3P_NLoE" target="_blank" class="link">presented and defended my research.</a>
+                        MAVERIK is a next-generation flight computer meant to push the boundry of what can be done with actively controlled model rockets. Currently, it's being manufactured and prototype testing will begin very soon.
                     </p>
                 </div>
                 <div class="pSkills">
                     <p>
-                        Differential Scanning Calorimetry Analysis
+                        EDAs
                     </p>
                     <p>
-                        Tensile Analysis
+                        PCB design
                     </p>
                     <p>
-                        Charpy Analysis
+                        Schematic Design
                     </p>
                     <p>
-                        Materials Science
+                        Buck Converter Routing
                     </p>
                     <p>
-                        Python
+                        RF Routing
                     </p>
                     <p>
-                        3D Printing
+                        Production
+                    </p>
+                    <p>
+                        C++
                     </p>
                 </div>
             </div>
@@ -294,6 +322,37 @@
                     </p>
                     <p>
                         Simulink
+                    </p>
+                </div>
+            </div>
+            <div class="infoSec">
+                <p class="subTitle">
+                    <a href="https://arxiv.org/abs/2409.09445" target="_blank">Sustainability Research</a>
+                </p>
+                <img src="projects/research.jpg">
+                <div class="xtraPad">
+                    <p class="infoTxt">
+                        a paper I authored on the potential of recycling PP from fishnet/rope and reinforcing it with glass fiber (GF) in the form of 3D printer filaments as a way to reduce/prevent ocean plastic. I also <a href="https://youtu.be/1YFS3P_NLoE" target="_blank" class="link">presented and defended my research.</a>
+                    </p>
+                </div>
+                <div class="pSkills">
+                    <p>
+                        Differential Scanning Calorimetry Analysis
+                    </p>
+                    <p>
+                        Tensile Analysis
+                    </p>
+                    <p>
+                        Charpy Analysis
+                    </p>
+                    <p>
+                        Materials Science
+                    </p>
+                    <p>
+                        Python
+                    </p>
+                    <p>
+                        3D Printing
                     </p>
                 </div>
             </div>
